@@ -1,3 +1,11 @@
+*gitlab-ci-multi-runner-1.4.1 (26 Jul 2016)
+
+  26 Jul 2016; Manuel Friedli <manuel@fritteli.ch>
+  +gitlab-ci-multi-runner-1.4.1.ebuild, -gitlab-ci-multi-runner-1.1.4.ebuild,
+  -gitlab-ci-multi-runner-1.3.1.ebuild:
+  dev-vcs/gitlab-ci-multi-runner:  - added ebuild for version 1.4.1 - deleted
+  ebuilds for versions <1.3.2
+
 *gitlab-ci-multi-runner-1.3.2 (09 Jul 2016)
 
   09 Jul 2016; Manuel Friedli <manuel@fritteli.ch>
